--- a/index.html
+++ b/index.html
@@ -233,24 +233,48 @@
                                 <div class="ind">
                                     <span class="comment">&lt;!-- Insert your content here --&gt;</span>
                                 </div>
-                                <span class="focus">&lt;/figcaption&gt;</span>
+                                <span class="focus">&lt;/figure&gt;</span>
                             </td>
                             <td>
                                 <p>This is not supported on Internet Explorer 8 and earlier.</p>
                             </td>
                             <td>
-                                &lt;figure&gt;
+                                <span class="focus">&lt;figure&gt;</span>
                                 <div class="ind">
                                     &lt;img src="./resources/miso_butterfly.jpg" style="width: 200px; height: 300px; object-fit: cover;" /&gt;
-                                    <span class="focus">&lt;figcaption&gt;Miso dressing up as a butterfly for Halloween 2021!&lt;/figcaption&gt;</span>
                                 </div>
-                                &lt;/figure&gt;
+                                <span class="focus">&lt;/figure&gt;</span>
                             </td>
                             <td>
                                 <figure>
                                     <img src="./resources/miso_butterfly.jpg" style="width: 200px; height: 300px; object-fit: cover;" />
-                                    <figcaption>Miso dressing up as a butterfly for Halloween 2021!</figcaption>
                                 </figure>
+                            </td>
+                        </tr>
+                        <tr> <!-- footer -->
+                            <td>footer</td>
+                            <td>This tag is used for a footer which would usually contain information about the website, page or product.</td>
+                            <td>
+                                <span class="focus">&lt;footer&gt;</span>
+                                <div class="ind">
+                                    <span class="comment">&lt;!-- Insert your content here --&gt;</span>
+                                </div>
+                                <span class="focus">&lt;/footer&gt;</span>
+                            </td>
+                            <td>
+                                <p>This is not supported on Internet Explorer 8 and earlier.</p>
+                            </td>
+                            <td>
+                                <span class="focus">&lt;footer&gt;</span>
+                                <div class="ind">
+                                    This page has been coded by Caitlyn Sun.
+                                </div>
+                                <span class="focus">&lt;/footer&gt;</span>
+                            </td>
+                            <td>
+                                <footer>
+                                    This page has been coded by Caitlyn Sun.
+                                </footer>
                             </td>
                         </tr>
                     </tbody>
@@ -316,7 +340,7 @@
                             <td>output</td>
                             <td>This tag calculates a value based on the formula and inputs entered.</td>
                             <td>
-                                <span class="focus">&lt;output name="<span class="comment">&lt;!-- Insert name here --&gt;</span>" for="<span class="comment">&lt;!-- Insert variables here --&gt;</span>"&gt;&lt;/output&gt;</span>
+                                <span class="focus">&lt;output name="</span><span class="comment">&lt;!-- Insert name here --&gt;</span>"<span class="focus"> for="</span><span class="comment">&lt;!-- Insert variables here --&gt;</span><span class="focus">"&gt;&lt;/output&gt;</span>
                             </td>
                             <td>
                                 <ul>
@@ -505,7 +529,7 @@
                             <td>canvas</td>
                             <td>This tag is used to draw graphics through scripting (eg. JavaScript)</td>
                             <td>
-                                <span class="focus">&lt;canvas id="<span class="comment">&lt;!-- Insert name here --&gt;</span>"&gt;<span class="comment">&lt;!-- Insert text here --&gt;</span>&lt;/canvas&gt;</span>
+                                <span class="focus">&lt;canvas id="</span><span class="comment">&lt;!-- Insert name here --&gt;</span><span class="focus">"&gt;</span><span class="comment">&lt;!-- Insert text here --&gt;</span><span class="focus">&lt;/canvas&gt;</span>
                             </td>
                             <td>
                                 <ul>
@@ -544,11 +568,11 @@
                             <td>svg</td>
                             <td>This tag creates a canvas to draw a vector image.</td>
                             <td>
-                                <span class="focus">&lt;svg&gt;
-                                <br />
-                                <span class="comment">&lt;!-- Insert vector code here --&gt;</span>
-                                <br />
-                                &lt;/svg&gt;</span>
+                                <span class="focus">&lt;svg&gt;</span>
+                                <div class="ind">
+                                    <span class="comment">&lt;!-- Insert vector code here --&gt;</span>
+                                </div>
+                                <span class="focus">&lt;/svg&gt;</span>
                             </td>
                             <td>
                                 <ul>
@@ -715,7 +739,7 @@
                             <td>embed</td>
                             <td>This tag renders most media.</td>
                             <td>
-                                <span class="focus">&lt;embed src="<span class="comment">&lt;!-- Insert file path --&gt;</span>"&gt;</span>
+                                <span class="focus">&lt;embed src="</span><span class="comment">&lt;!-- Insert file path --&gt;</span><span class="focus">"&gt;</span>
                             </td>
                             <td>
                                 <ul>
@@ -766,7 +790,7 @@
                             <td>source</td>
                             <td>Allows list of different sources for media elements such as video, audio and picture. The browser will render the first source that renders successfully.</td>
                             <td>
-                                <span class="focus">&lt;source src="<span class="comment">&lt;!-- Insert file path --&gt;</span>"&gt;</span>
+                                <span class="focus">&lt;source src="</span><span class="comment">&lt;!-- Insert file path --&gt;</span><span class="focus">"&gt;</span>
                             </td>
                             <td>
                                 <ul>
@@ -834,7 +858,7 @@
                             <td>track</td>
                             <td>This tag adds subtitles to the &lt;audio&gt; and &lt;video&gt; tags.</td>
                             <td>
-                                <span class="focus">&lt;track src="<span class="comment">&lt;!-- Insert URL here --&gt;</span>"&gt;</span>
+                                <span class="focus">&lt;track src="</span><span class="comment">&lt;!-- Insert URL here --&gt;</span><span class="focus">"&gt;</span>
                             </td>
                             <td>
                                 The following attributes are used:
