--- a/index.html
+++ b/index.html
@@ -277,6 +277,59 @@
                                 </footer>
                             </td>
                         </tr>
+                        <tr> <!-- header -->
+                            <td>header</td>
+                            <td>This tag is used for a header which would usually contain introductory information about the website, page or product and/or a navigation bar.</td>
+                            <td>
+                                <span class="focus">&lt;header&gt;</span>
+                                <div class="ind">
+                                    <span class="comment">&lt;!-- Insert your content here --&gt;</span>
+                                </div>
+                                <span class="focus">&lt;/header&gt;</span>
+                            </td>
+                            <td>
+                                <p>There are no additional notes for this tag.</p>
+                            </td>
+                            <td>
+                                <span class="focus">&lt;header&gt;</span>
+                                <div class="ind">
+                                    &lt;div&gt;
+                                    <div class="ind">
+                                        &lt;img src="./resources/miso_butterfly.jpg" /&gt;
+                                        <br />
+                                        &lt;div&gt;Welcome to Miso's fan page!&lt;/div&gt;
+                                    </div>
+                                    &lt;/div&gt;
+                                    <br />
+                                    &lt;nav&gt;
+                                    <div class="ind">
+                                        &lt;ul&gt;
+                                        <div class="ind">
+                                            &lt;a href="#"&gt;&lt;li&gt;About&lt;/li&gt;&lt;/a&gt;
+                                            <br />
+                                            &lt;a href="#"&gt;&lt;li&gt;News&lt;/li&gt;&lt;/a&gt;
+                                        </div>
+                                        &lt;/ul&gt;
+                                    </div>
+                                    &lt;/nav&gt;
+                                </div>
+                                <span class="focus">&lt;/header&gt;</span>
+                            </td>
+                            <td>
+                                <header id="headerSample">
+                                    <div id="home">
+                                        <img src="./resources/miso_butterfly.jpg" />
+                                        <div>Welcome to Miso's fan page!</div>
+                                    </div>
+                                    <nav>
+                                        <ul>
+                                            <a href="#"><li>About</li></a>
+                                            <a href="#"><li>News</li></a>
+                                        </ul>
+                                    </nav>
+                                </header>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </article>
@@ -854,7 +907,7 @@
                                 </picture>
                             </td>
                         </tr>
-                        <tr> <!-- track --> <!-- Isuse: video does not render on Chrome and subtitles are not displaying-->
+                        <tr> <!-- track --> <!-- Isuse: subtitles are not displaying-->
                             <td>track</td>
                             <td>This tag adds subtitles to the &lt;audio&gt; and &lt;video&gt; tags.</td>
                             <td>
